# PlusImageStreaming

./: CMakeLists.txt  DataRepository.cxx  DataRepository.h  README.md  main.cpp
ConfigFiles/: PlusDeviceSet_Server_V4L2.xml  PlusDeviceSet_Server_WebcamTest.xml
